<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_score"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_gravity="center"
            android:src="@drawable/happy_score"
            android:contentDescription="@string/score_img"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#a83535"
            android:textSize="36sp"
            android:textStyle="bold"
            android:text="@string/finish_score_txt"/>
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#a83535"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/score_txt"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="60sp"
            tools:text="0"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="#a83535"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/difficulty_score_txt"/>

                <TextView
                    android:id="@+id/dificulty_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    tools:text="Fácil"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#a83535"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/question_answered_score_txt"/>

                <TextView
                    android:id="@+id/question_answered_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    tools:text="0"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#a83535"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/hint_use_score_txt"/>

                <TextView
                    android:id="@+id/hint_use_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    tools:text="0"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#a83535"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/hint_bono_score_txt"/>

                <TextView
                    android:id="@+id/hint_bono_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    tools:text="0"/>

            </FrameLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp"/>
        
        <Button
            android:id="@+id/back_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff4133"
            android:text="@string/back_to_start_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>